<resources>
    <string name="app_name">BookWeb</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="main_page">Strona Główna</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="BookWeb">BookWeb</string>
    <string name="Math">Matematyka</string>
    <string name="Inf">Informatyka</string>
    <string name="Elec">Elektronika</string>
    <string name="Lista">Lista książek</string>
</resources>